[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "acm_model"
version = "0.0.1"
description = "A Python notebook explaining the ACM model"
readme = "README.md"
authors = [
    {name = "Pedro Coelho", email = "pcoelho00@outlook.com"},

]
dependencies = [
    'numpy>=2.0.0',
    'pandas>=2.2.2',
    'pyarrow>=16.1.0',
    'scikit_learn>=1.5.1',
    'plotly<=5.24.1',
]